2006-10-18 Yen-Ju Chen <yjchenx at gmail>

	* Move workspace switcher into its own submenu.

2006-09-24 Yen-Ju Chen <yjchenx at gmail>

	* Terminate GNUstep application through NSConnection.

2006-09-23 Yen-Ju Chen <yjchenx at gmail>

	* Start to implement show and quit in contextual menu.
	* Obtain command.

2006-09-19 Yen-Ju Chen <yjchenx at gmail>

	* Works better.

2006-09-10 Yen-Ju Chen <yjchenx at gmail>

	* AZWorkspaceView: 
	make it a subclass of AZDockView.
	launch GSWorkspaceApplication or xterm with left click.
	contextual menu as workspace switcher.
	* AZDock:
	centralize atoms declaration.
	check change of workspace.

2006-09-05 Yen-Ju Chen <yjchenx at gmail>

	* Make icon diplay even when application icon is suppressed.
	* In case the icon image is not available from NSWorkspace.

2006-09-04 Yen-Ju Chen <yjchenx at gmail>

	* AZDock.m:
	User defaults: DockPosition = 0 (right side)
	                              1 (left side)
				      2 (bottom side)

2006-09-03 Yen-Ju Chen <yjchenx at gmail>

	* Initial import.
	* Make it looks nicer.
